# sci-eng-utils

./: .clang-format  .clangd  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ExtendedKalmanFilter.h  ExtendedKalmanFilter.hpp  GenericMatrix.h  KalmanImu.h  KalmanImu.hpp  Patterns.h  SafePhysics.h  UnitsNStd.h  UnitsSI.h
include/GenericMath/: GenericEulerAngles.h  GenericEulerAngles.hpp  GenericMath.h  GenericMath.hpp  GenericMatrix.h  GenericMatrix.hpp  GenericQuaternion.h  GenericQuaternion.hpp  GenericTensor.h  GenericTensor.hpp
include/SafePhysics/: Patterns.h  Patterns.hpp  SafePhysics.h  SafePhysics.hpp  UnitsNStd.h  UnitsNStd.hpp  UnitsSI.h  UnitsSI.hpp
main/: MathTest.cpp  MatrixInversionTest.cpp  PhysicsTest.cpp  math-test.cpp  physics-test.cpp
tests/: EulerAnglesTest.h  MainTest.cpp  MatrixTest.h  TensorTest.h  main-test.cpp
tests/include/: EulerAnglesTest.hpp  MatrixTest.hpp  TensorTest.hpp
